--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
       "@tanstack/react-query": "^5.60.5",
       "@tanstack/react-query-devtools": "^5.60.5",
       "axios": "^1.7.7",
+      "date-fns": "^4.1.0",
       "react": "^18.3.1",
+      "react-date-range": "^2.0.1",
       "react-dom": "^18.3.1",
+      "react-icons": "^5.3.0",
       "react-query": "^3.39.3",
       "react-router-dom": "^6.28.0",
+      "react-select": "^5.8.3",
       "react-spinners": "^0.14.1",
       "sass": "^1.81.0",
       "scss": "^0.2.4"
@@ -25,6 +29,7 @@
    "devDependencies": {
       "@eslint/js": "^9.13.0",
       "@types/react": "^18.3.12",
+      "@types/react-date-range": "^1.4.9",
       "@types/react-dom": "^18.3.1",
       "@vitejs/plugin-react": "^4.3.3",
       "eslint": "^9.13.0",
